--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -9,66 +9,8 @@
     <script type="text/javascript">
 
 
-        $(document).ready(function ()
-                          {
-
-                              $('.submenuOperContent').fadeOut();
-                              $('.submenuAdminContent').fadeOut();
-                              $('.submenuSAContent').fadeOut();
-                              $('.MobileButton').click(function ()
-                                                       {
-                                                           if ($(window).width() &lt; 700)
-                                                           {
-                                                               $('.displaymobMenuView').fadeIn();
-                                                           }
-                                                       });
-
-                              $('.submenuBtn1').click(function ()
-                                                      {
-                                                          $('.submenuContent1').fadeIn();
-                                                      });
-                              $('.submenuContent1').mouseleave(function ()
-                                                               {
-                                                                   $('.submenuContent1').fadeOut();
-                                                               });
-                              $('.submenuSABtn').click(function ()
-                                                       {
-                                                           $('.submenuSAContent').fadeIn();
-                                                           $('.submenuOperContent').fadeOut();
-                                                           $('.submenuAdminContent').fadeOut();
-                                                       });
-                              $('.submenuSAContent').mouseleave(function ()
-                                                                {
-                                                                    $('.submenuSAContent').fadeOut();
-                                                                });
-                              $('.submenuAdminBtn').click(function ()
-                                                          {
-                                                              $('.submenuAdminContent').fadeIn();
-                                                              $('.submenuOperContent').fadeOut();
-                                                              $('.submenuSAContent').fadeOut();
-                                                          });
-                              $('.submenuAdminContent').mouseleave(function ()
-                                                                   {
-                                                                       $('.submenuAdminContent').fadeOut();
-                                                                   });
-                              $('.submenuOperBtn').click(function ()
-                                                         {
-                                                             $('.submenuOperContent').fadeIn();
-                                                             $('.submenuAdminContent').fadeOut();
-                                                             $('.submenuSAContent').fadeOut();
-                                                         });
-                              $('.submenuOperContent').mouseleave(function ()
-                                                                  {
-                                                                      $('.submenuOperContent').fadeOut();
-                                                                  });
-                              $('.displaymobMenuView').mouseleave(function ()
-                                                                  {
-                                                                      if ($(window).width() &lt; 700)
-                                                                      {
-                                                                          $('.displaymobMenuView').fadeOut();
-                                                                      }
-                                                                  });
-                          });
+        /*global $, jQuery*/
+        /*MENU*/
 
 
         $(function ()
@@ -147,30 +89,87 @@
 
 
     </script>
-    <div class="Wid60 Fright menuButtons">
-        <ul class="MobileButton">
-            <li class="fa fa-bars"></li>
-        </ul>
 
-        <ul id="menuMainNavigation" class="menuBtnLinks displaymobMenuView">
-            <li id="dashboardMenuHighlight">
-                <a href="#{uiLayout.defaultHome}" id="menudashboardbtn">Dashboard</a>
-            </li>
+    <script>
+        $(document).ready(function() {
+            $(".nav li a").each(function() {
+                if ($(this).next().length > 0) {
+                    $(this).addClass("parent");
+                };
+            })
 
-            <ui:fragment rendered="#{webutil.hasAccess('USER')}">
-                <li id="newaccountMenuHighlight">
+            $(".toggleMenu").click(function(e) {
+                e.preventDefault();
+                $(this).toggleClass("active");
+                $(".nav").toggle();
+            });
+            adjustMenu();
+        })
+
+        $(window).bind('resize orientationchange', function() {
+            ww = document.body.clientWidth;
+            adjustMenu();
+        });
+
+        var adjustMenu = function() {
+            var ww = document.body.clientWidth;
+            if (768 > ww) {
+                $(".toggleMenu").css("display", "inline-block");
+                if (!$(".toggleMenu").hasClass("active")) {
+                    $(".nav").hide();
+                } else {
+                    $(".nav").show();
+                }
+
+                $(".nav li").unbind('mouseenter mouseleave click');
+                $(".nav li a.parent").unbind('click').bind('click', function(e) {
+                    // must be attached to anchor element to prevent bubbling
+                    e.preventDefault();
+                    $(this).parent("li").toggleClass("hover");
+                });
+            }
+            else if (ww >= 768) {
+                $(".toggleMenu").css("display", "none");
+                $(".nav").show();
+                $(".nav li").removeClass("hover");
+                $(".nav li a").unbind('click');
+                $(".nav li").unbind('mouseenter mouseleave').bind('mouseenter mouseleave', function() {
+                    // must be attached to li so that mouseleave is not triggered when hover over submenu
+                    $(this).toggleClass('hover');
+                });
+            }
+        }
+
+    </script>
+
+
+
+
+
+    <div class="Wid60 Fright">
+
+
+
+            <a class="toggleMenu" href="#">Menu</a>
+            <ul class="nav" id="menuMainNavigation" >
+                <li  class="test" id="dashboardMenuHighlight">
+                    <a href="#{uiLayout.defaultHome}" id="menudashboardbtn">Dashboard</a>
+
+                </li>
+
+                <ui:fragment rendered="#{webutil.hasAccess('USER')}">
+                <li  id="newaccountMenuHighlight">
                     <p:commandLink rendered="true" id="menunewacctbtn"
                                    actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}">
                         <h:outputText value="New Account"/>
                     </p:commandLink>
                 </li>
-            </ui:fragment>
 
-            <ui:fragment rendered="#{(webutil.hasAccess('Advisor') and webutil.hasRole('Operations')) or webutil.hasAccess('SuperAdmin') }">
-                <li id="OperationMenuHighlight">
+                </ui:fragment>
+
+                <ui:fragment rendered="#{(webutil.hasAccess('Advisor') and webutil.hasRole('Operations')) or webutil.hasAccess('SuperAdmin') }">
+                <li  class="">
                     <a href="#" class="submenuOperBtn" id="menuOperbtn">Operations</a>
-                </li>
-                <div class="subMenuBlk submenuOperContent">
                     <ul>
                         <ui:fragment rendered="#{webutil.hasMenu('Trade','Operations')}">
                             <li id="tradeMenuHighlight">
@@ -184,13 +183,12 @@
                             </li>
                         </ui:fragment>
                     </ul>
-                </div>
-            </ui:fragment>
-            <ui:fragment rendered="#{(webutil.hasAccess('Advisor') and webutil.hasRole('Admin') or webutil.hasAccess('SuperAdmin'))}">
-                <li id="adminMenuHighlight">
-                    <a href="#" class="submenuAdminBtn" id="menuAdminbtn">Admin</a>
                 </li>
-                <div class="subMenuBlk submenuAdminContent">
+                </ui:fragment>
+
+                <ui:fragment rendered="#{(webutil.hasAccess('Advisor') and webutil.hasRole('Admin') or webutil.hasAccess('SuperAdmin'))}">
+                <li  class="">
+                    <a href="#" class="submenuAdminBtn" id="menuAdminbtn">Admin</a>
                     <ul>
                         <ui:fragment rendered="#{webutil.hasMenu('Login Management','Admin')}">
                             <li id="AcctEmulMenuHighlight">
@@ -212,14 +210,12 @@
                             </li>
                         </ui:fragment>
                     </ul>
-                </div>
-            </ui:fragment>
-
-            <ui:fragment rendered="#{webutil.hasAccess('SuperAdmin')}">
-                <li id="superAdminMenuHighlight">
-                    <a href="#" class="submenuSABtn" id="menuSuperAdminbtn">Product Admin</a>
                 </li>
-                <div class="subMenuBlk submenuSAContent">
+                </ui:fragment>
+
+                <ui:fragment rendered="#{webutil.hasAccess('SuperAdmin')}">
+                <li  class="">
+                    <a href="#" class="submenuSABtn" id="menuSuperAdminbtn">Product Admin</a>
                     <ul>
                         <li id="filePrcsMenuHighlight">
                             <a href="/pages/productadmin/fileProcessEmulation.xhtml" id="menuFlPrcsbtn">File Processing</a>
@@ -229,46 +225,51 @@
                             <a href="/pages/productadmin/accountEmulation.xhtml" id="menuAcctEmulbtn">Account Emulation</a>
                         </li>
                     </ul>
-                </div>
-            </ui:fragment>
+                </li>
+                </ui:fragment>
 
-            <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
-                <li id="aggrMenuHighlight">
+
+                <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
+                <li  class="">
                     <p:commandLink rendered="true" id="menuaggrbtn"
                                    actionListener="#{aggrBean.startup('D')}">
                         <h:outputText value="Aggregation"/>
                     </p:commandLink>
-                </li>
-            </ui:fragment>
 
-            <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
-                <li id="newaccountMenuHighlight">
+                </li>
+                </ui:fragment>
+
+                <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
+                <li>
                     <p:commandLink rendered="true" id="menureportsbtn"
                                    actionListener="#{uiLayout.doMenuAction('consumer', 'creports.xhtml')}">
                         <h:outputText value="Reports"/>
                     </p:commandLink>
                 </li>
-            </ui:fragment>
+                </ui:fragment>
 
-            <li id="myprofileMenuHighlight">
-                <a href="#" class="submenuBtn1" id="menumyprofilebtn">My Profile</a>
-            </li>
-            <div class="subMenuBlk submenuContent1">
-                <ul>
-                    <li><a href="/pages/common/myprofile.xhtml">Setting</a></li>
-                    <div class="menuSeperator"></div>
-                    <li>My Advisors</li>
-                    <div class="menuSeperator"></div>
-                    <li>
-                        <h:form>
-                            <h:commandLink id="menulogoutBtn" actionListener="#{sessionControl.logout}" styleClass="idLogoutCommon">
-                                <h:outputText value="Logout"/>
-                            </h:commandLink>
-                        </h:form>
-                    </li>
-                </ul>
-            </div>
-        </ul>
+                <li id="">
+                    <a href="#" class="" id="">My Profile</a>
+
+                    <ul>
+                        <li><a href="/pages/common/myprofile.xhtml">Setting</a></li>
+                        <div class="menuSeperator"></div>
+                        <li><a href="">My Advisors</a></li>
+                        <div class="menuSeperator"></div>
+                        <li>
+                            <h:form>
+                                <h:commandLink id="menulogoutBtn" actionListener="#{sessionControl.logout}" styleClass="idLogoutCommon">
+                                    <h:outputText value="Logout"/>
+                                </h:commandLink>
+                            </h:form>
+                        </li>
+                    </ul>
+                </li>
+
+
+            </ul>
+
+
     </div>
 </ui:composition>
 
