--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_0/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_0/css/invessenceCustom.css
@@ -3403,11 +3403,12 @@ input {
     font-size: 13px;
     margin: 0px 5px;
     padding: 18px 7px 3px 10px;
+    text-align: left;
 }
 
 .menuButtons ul {
     text-align: right;
-    padding: 0px 30px;
+    padding: 5px 30px;
 }
 
 .mbSelected {
@@ -4553,17 +4554,22 @@ main.customtabs {
     font-size: 14px !important;
 }
 
-
-.customtabs button {    margin: 5px 10px !important;
+.customtabs button {
+    margin: 5px 10px !important;
     width: 145px !important;
-    text-align: left !important;}
+    text-align: left !important;
+}
 
-.customtabs button span {background-color: #009abb !important;    border: none !important;
+.customtabs button span {
+    background-color: #009abb !important;
+    border: none !important;
     height: 20px !important;
     line-height: 20px !important;
-    overflow: hidden !important;}
+    overflow: hidden !important;
+}
 
-.customtabs button span:last-child:before {content: "";
+.customtabs button span:last-child:before {
+    content: "";
     content: "";
     position: absolute;
     z-index: -1;
@@ -4620,17 +4626,18 @@ main.customtabs {
     transition-timing-function: ease-out;
 }
 
-
 .customtabs .ui-inputfield.ui-state-hover, .customtabs .ui-inputfield.ui-state-focus {
-    border:none !important;
+    border: none !important;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2) inset !important;
 }
-.customtabs button .fa {
-font-size: 16px;
-    line-height: 16px !important;
-    width: 20px !important;}
 
-.customtabs button.ui-state-hover .fa, .customtabs button.ui-state-focus .fa  {
+.customtabs button .fa {
+    font-size: 16px;
+    line-height: 16px !important;
+    width: 20px !important;
+}
+
+.customtabs button.ui-state-hover .fa, .customtabs button.ui-state-focus .fa {
     color: #fff;
     -webkit-transition: all 600ms ease;
     -moz-transition: all 600ms ease;
@@ -4639,7 +4646,8 @@ font-size: 16px;
     transition: all 600ms ease;
 }
 
-.customtabs .selectDD {    display: block;
+.customtabs .selectDD {
+    display: block;
     /* padding: 10px !important; */
     margin: 10px;
     background-color: #e7e7e7 !important;
@@ -4647,27 +4655,33 @@ font-size: 16px;
     border: none !important;
     box-shadow: none !important;
     font-size: 14px !important;
-    border-radius: 0px;}
-
+    border-radius: 0px;
+}
 
 .customtabs .selectDD label {
-/* display: block; */
-/* padding: 10px !important; */
-/* margin: 10px; */
-background-color: transparent;
-/* color: #000 !important; */
-border: none;
-box-shadow: none !important;
-/* font-size: 14px !important; */
-height: 20px;
-line-height: 20px;}
+    /* display: block; */
+    /* padding: 10px !important; */
+    /* margin: 10px; */
+    background-color: transparent;
+    /* color: #000 !important; */
+    border: none;
+    box-shadow: none !important;
+    /* font-size: 14px !important; */
+    height: 20px;
+    line-height: 20px;
+}
 
-.customtabs .selectDD span:last-child {    margin-left: 4px; !important;
-    margin-top: 9px !important;}
+.customtabs .selectDD span:last-child {
+    margin-left: 4px;
+!important;
+    margin-top: 9px !important;
+}
 
-.customtabs .ui-selectonemenu .ui-selectonemenu-trigger {width: 25px !important;    top: 1px;
-    height: 32px;}
-
+.customtabs .ui-selectonemenu .ui-selectonemenu-trigger {
+    width: 25px !important;
+    top: 1px;
+    height: 32px;
+}
 
 .customtabs table.datatable {
     border: 1px solid #ccc;
@@ -4681,8 +4695,9 @@ line-height: 20px;}
 .customtabs table.datatable tr {
 
     border: 1px solid #ddd;
-    padding:5px;
+    padding: 5px;
 }
+
 .customtabs table.datatable th,
 .customtabs table.datatable td {
     padding: 0px 10px;
@@ -4690,12 +4705,16 @@ line-height: 20px;}
     font-size: 14px;
 
 }
+
 .customtabs table thead tr {
-background-color: #5fcf80;
-color: #fff;
+    background-color: #5fcf80;
+    color: #fff;
 }
-.customtabs table.datatable th:first-child {width: 40px !important;
-    padding: 20px 0px !important;}
+
+.customtabs table.datatable th:first-child {
+    width: 40px !important;
+    padding: 20px 0px !important;
+}
 
 .customtabs table.datatable th {
     font-size: 16px;
@@ -4709,28 +4728,32 @@ color: #fff;
     text-align: center;
 }
 
-.customtabs table.datatable tr:nth-child(odd) td{
+.customtabs table.datatable tr:nth-child(odd) td {
     background: #fff;
 }
-.customtabs table.datatable tr:nth-child(even) td{
+
+.customtabs table.datatable tr:nth-child(even) td {
     background: #e9e9e9;
 }
 
-.customtabs.emaillog input {    display: block;
+.customtabs.emaillog input {
+    display: block;
     width: 20%;
     float: left;
     padding: 0;
     margin: 0px 0px 20px 0px;
-    height: 36px;}
-
+    height: 36px;
+}
 
 @media screen and (max-width: 600px) {
     .customtabs table {
         border: 0;
     }
+
     .customtabs table caption {
         font-size: 1.3em;
     }
+
     .customtabs table thead {
         border: none;
         clip: rect(0 0 0 0);
@@ -4741,17 +4764,20 @@ color: #fff;
         position: absolute;
         width: 1px;
     }
+
     .customtabs table tr {
         border-bottom: 3px solid #ddd;
         display: block;
         margin-bottom: .625em;
     }
+
     .customtabs table td {
         border-bottom: 1px solid #ddd;
         display: block;
         font-size: .8em;
         text-align: right;
     }
+
     .customtabs table td:before {
         /*
         * aria-label has no advantage, it won't be read inside a table
@@ -4762,19 +4788,22 @@ color: #fff;
         font-weight: bold;
         text-transform: uppercase;
     }
+
     .customtabs table td:last-child {
         border-bottom: 0;
     }
 }
+
 .avlrole {
-background-color: #f2f2f2;
-color: #fff;
-padding: 0px !important;
-width: 210px;
-    height: 190px;    height: 190px;
+    background-color: #f2f2f2;
+    color: #fff;
+    padding: 0px !important;
+    width: 210px;
+    height: 190px;
+    height: 190px;
 }
 
-.prorole{
+.prorole {
     background-color: #f2f2f2;
     color: #fff;
     padding: 0px !important;
@@ -4782,54 +4811,64 @@ width: 210px;
     height: 190px;
 }
 
-.prorole .ui-selectlistbox-list li, .avlrole .ui-selectlistbox-list li {    padding: 10px;
-    color:#666; border-bottom: 1px solid #8a8a8a !important; border-radius: 0px;
+.prorole .ui-selectlistbox-list li, .avlrole .ui-selectlistbox-list li {
+    padding: 10px;
+    color: #666;
+    border-bottom: 1px solid #8a8a8a !important;
+    border-radius: 0px;
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
-    border-radius: 0px; }
+    border-radius: 0px;
+}
 
-.avlrole .ui-selectlistbox-list li:last-child {  border-bottom: 0px solid #666 !important; }
-
+.avlrole .ui-selectlistbox-list li:last-child {
+    border-bottom: 0px solid #666 !important;
+}
 
 .prorole .ui-selectlistbox-list li.ui-state-hover, .avlrole .ui-selectlistbox-list li.ui-state-hover,
 .prorole .ui-selectlistbox-list li.ui-state-active, .avlrole .ui-selectlistbox-list li.ui-state-active,
-.prorole .ui-selectlistbox-list li.ui-state-highlight, .avlrole .ui-selectlistbox-list li.ui-state-highlight
-{
-background-color: #5fcf80 !important;
-color: #fff;
+.prorole .ui-selectlistbox-list li.ui-state-highlight, .avlrole .ui-selectlistbox-list li.ui-state-highlight {
+    background-color: #5fcf80 !important;
+    color: #fff;
 }
 
-.roleaddbutton span {background-color: #5fcf80 !important; color: #fff;}
+.roleaddbutton span {
+    background-color: #5fcf80 !important;
+    color: #fff;
+}
 
-.roleremovebutton span {background-color: #fc6e52 !important; color: #fff;}
+.roleremovebutton span {
+    background-color: #fc6e52 !important;
+    color: #fff;
+}
 
-.customtabs .titles {    font-size: 22px;
+.customtabs .titles {
+    font-size: 22px;
     margin-bottom: 15px !important;
-    font-weight: 100;}
+    font-weight: 100;
+}
 
 .border-bottom-gradient {
     border-bottom: 2px solid;
     padding: 10px 0px;
     margin-bottom: 10px;
-    -moz-border-image: -moz-linear-gradient(left, rgba(92,7,52,1) 0%, rgba(134,29,84,1) 12%, rgba(255,93,177,1) 47%, rgba(83,0,30,1) 100%);
-    -webkit-border-image:  -webkit-gradient(left top, right top, color-stop(0%, rgba(92,7,52,1)), color-stop(12%, rgba(134,29,84,1)), color-stop(47%, rgba(255,93,177,1)), color-stop(100%, rgba(83,0,30,1)));
-    -webkit-border-image:  -webkit-linear-gradient(left, rgba(92,7,52,1) 0%, rgba(134,29,84,1) 12%, rgba(255,93,177,1) 47%, rgba(83,0,30,1) 100%);
-    -o-border-image: -o-linear-gradient(left, rgba(92,7,52,1) 0%, rgba(134,29,84,1) 12%, rgba(255,93,177,1) 47%, rgba(83,0,30,1) 100%); border-image: linear-gradient(to right, rgba(92,7,52,1) 0%, rgba(134,29,84,1) 12%, rgba(255,93,177,1) 47%, rgba(83,0,30,1) 100%);
+    -moz-border-image: -moz-linear-gradient(left, rgba(92, 7, 52, 1) 0%, rgba(134, 29, 84, 1) 12%, rgba(255, 93, 177, 1) 47%, rgba(83, 0, 30, 1) 100%);
+    -webkit-border-image: -webkit-gradient(left top, right top, color-stop(0%, rgba(92, 7, 52, 1)), color-stop(12%, rgba(134, 29, 84, 1)), color-stop(47%, rgba(255, 93, 177, 1)), color-stop(100%, rgba(83, 0, 30, 1)));
+    -webkit-border-image: -webkit-linear-gradient(left, rgba(92, 7, 52, 1) 0%, rgba(134, 29, 84, 1) 12%, rgba(255, 93, 177, 1) 47%, rgba(83, 0, 30, 1) 100%);
+    -o-border-image: -o-linear-gradient(left, rgba(92, 7, 52, 1) 0%, rgba(134, 29, 84, 1) 12%, rgba(255, 93, 177, 1) 47%, rgba(83, 0, 30, 1) 100%);
+    border-image: linear-gradient(to right, rgba(92, 7, 52, 1) 0%, rgba(134, 29, 84, 1) 12%, rgba(255, 93, 177, 1) 47%, rgba(83, 0, 30, 1) 100%);
 }
-
 
 /* End Sagar tabs for adv and user mng */
 
-.customtabcontainer
-{
+.customtabcontainer {
     border-bottom: 2px solid #009abb;
     color: black;
-
 
 }
 
 .activetabetrade {
-background-color:#009abb !important;
+    background-color: #009abb !important;
     color: #fff;
     padding: 10px 30px;
 
@@ -4844,9 +4883,10 @@ background-color:#009abb !important;
     -o-transition: all 600ms ease;
     transition: all 600ms ease;
     margin-right: 2px;
-    font-size: 18px !important;}
+    font-size: 18px !important;
+}
 
-.inactivetabtrade{
+.inactivetabtrade {
     border-radius: 0px;
     padding: 10px 30px;
     font-size: 18px !important;
@@ -4857,11 +4897,11 @@ background-color:#009abb !important;
     -moz-transition: all 600ms ease;
     -ms-transition: all 600ms ease;
     -o-transition: all 600ms ease;
-    transition: all 600ms ease;}
+    transition: all 600ms ease;
+}
 
-
-
-.activetabereview {   background-color:#009abb !important;
+.activetabereview {
+    background-color: #009abb !important;
     color: #fff;
     padding: 10px 30px;
 
@@ -4876,9 +4916,10 @@ background-color:#009abb !important;
     -o-transition: all 600ms ease;
     transition: all 600ms ease;
     margin-right: 2px;
-    font-size: 18px !important;}
+    font-size: 18px !important;
+}
 
-.inactivetabreview{
+.inactivetabreview {
     border-radius: 0px;
     padding: 10px 30px;
     font-size: 18px !important;
@@ -4889,30 +4930,171 @@ background-color:#009abb !important;
     -moz-transition: all 600ms ease;
     -ms-transition: all 600ms ease;
     -o-transition: all 600ms ease;
-    transition: all 600ms ease;}
+    transition: all 600ms ease;
+}
 
-.tabborderbottom {    border-bottom: 2px solid #009abb !important;
-    border-radius: 0px !important;}
+.tabborderbottom {
+    border-bottom: 2px solid #009abb !important;
+    border-radius: 0px !important;
+}
 
-.rollbackbutton{padding: 0 !important; float: right !important;}
+.rollbackbutton {
+    padding: 0 !important;
+    float: right !important;
+}
 
+.customAcco {
+    border: 0px solid !important;
+}
 
-.customAcco {border: 0px solid !important;}
-.customAcco h3.ui-accordion-header {background: transparent;
+.customAcco h3.ui-accordion-header {
+    background: transparent;
     background-color: #a9a9a9 !important;
     color: #666;
-    font-size: 18px !important;}
+    font-size: 18px !important;
+}
 
-.customAcco h3.ui-state-active {background: transparent;
+.customAcco h3.ui-state-active {
+    background: transparent;
     background-color: #009abb !important;
     color: #666;
-    font-size: 18px !important;}
+    font-size: 18px !important;
+}
 
-.customAcco .ui-accordion-content table {width: 40% !important;}
+.customAcco .ui-accordion-content table {
+    width: 40% !important;
+}
 
-.dwnlbut span > span {background-color: #009abb !important;
+.dwnlbut span > span {
+    background-color: #009abb !important;
     border: none !important;
     height: 20px !important;
     margin-left: 10px;
     line-height: 20px !important;
-    overflow: hidden !important;}
+    overflow: hidden !important;
+}
+
+
+
+.toggleMenu {
+    display: none;
+    background: #666;
+    padding: 10px 15px;
+    color: #fff;
+}
+
+.nav {
+    list-style: none;
+    *zoom: 1;
+    font-size: 13px;
+    padding-top: 20px;
+    padding-left: 0px;
+}
+
+.nav:before,
+.nav:after {
+    content: " ";
+    display: table;
+}
+
+.nav:after {
+    clear: both;
+}
+
+.nav ul {
+    list-style: none;
+    width: 9em;
+}
+
+.nav a {
+    padding: 0px 15px;
+    color: #000;
+}
+
+.nav li {
+    position: relative;
+}
+
+.nav > li {
+    float: left;
+}
+
+.nav > li > .parent {
+    background-image: url("https://raw.githubusercontent.com/tessalt/dropdowns/master/images/downArrow.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.nav > li > a {
+    display: block;
+}
+
+.nav li ul {
+    position: absolute;
+    left: -9999px;
+    padding: 0px;
+    background-color: #fff;
+    box-shadow: 0px 1px 2px #000;
+    top: 18px;
+    width: 180px;
+}
+
+.nav > li.hover > ul {
+    left: 0;
+}
+
+.nav > li.hover:last-child > ul {
+    left: -110px;
+}
+
+.nav li li.hover ul {
+    left: 0;
+    padding-top: 0px;
+    top: 50px;
+}
+
+.nav li li a {
+    display: block;
+    padding: 10px;
+    position: relative;
+    z-index: 100;
+
+}
+
+.nav > li > ul > li {padding: 0px !important;}
+
+.nav li li li a {
+    background: #249578;
+    z-index: 200;
+    border-top: 1px solid #1d7a62;
+}
+
+@media screen and (max-width: 768px) {
+    .active {
+        display: block;
+    }
+
+    .nav > li {
+        float: none;
+    }
+
+    .nav > li > .parent {
+        background-position: 95% 50%;
+    }
+
+    .nav li li .parent {
+        background-image: url("https://raw.githubusercontent.com/tessalt/dropdowns/master/images/downArrow.png");
+        background-repeat: no-repeat;
+        background-position: 95% 50%;
+    }
+
+    .nav ul {
+        display: block;
+        width: 100%;
+    }
+
+    .nav > li.hover > ul, .nav li li.hover ul {
+        position: static;
+    }
+
+}
