--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -167,7 +167,7 @@
 
                 </ui:fragment>
 
-                <ui:fragment rendered="#{(webutil.hasAccess('Advisor') and webutil.hasRole('Operations')) or webutil.hasAccess('SuperAdmin') }">
+                <ui:fragment rendered="#{(webutil.hasSubMenu('Operations')) and ((webutil.hasAccess('Advisor') and webutil.hasRole('Operations')) or webutil.hasAccess('SuperAdmin'))}">
                 <li  class="">
                     <a href="#" class="submenuOperBtn" id="menuOperbtn">Operations</a>
                     <ul>
@@ -179,14 +179,14 @@
                         <ui:fragment rendered="#{webutil.hasMenu('Model','Operations')}">
                             <div class="menuSeperator"></div>
                             <li id="modelMenuHighlight">
-                                <a href="/pages/advisor/assetworkflow.xhtml" id="menutradebtn">Model</a>
+                                <a href="/pages/advisor/assetworkflownew.xhtml" id="menutradebtn">Model</a>
                             </li>
                         </ui:fragment>
                     </ul>
                 </li>
                 </ui:fragment>
 
-                <ui:fragment rendered="#{(webutil.hasAccess('Advisor') and webutil.hasRole('Admin') or webutil.hasAccess('SuperAdmin'))}">
+                <ui:fragment rendered="#{(webutil.hasSubMenu('Admin')) and ((webutil.hasAccess('Advisor') and webutil.hasRole('Admin')) or webutil.hasAccess('SuperAdmin'))}">
                 <li  class="">
                     <a href="#" class="submenuAdminBtn" id="menuAdminbtn">Admin</a>
                     <ul>
