Code check in By Sagar for File Processing changes

--- a/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
@@ -144,7 +144,7 @@
                 </ui:fragment>
 
 
-                <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
+                <ui:fragment rendered="#{(webutil.hasSubMenu('User')) and webutil.hasAccess('User')}">
                     <li  class="">
                         <p:commandLink rendered="true" id="menuaggrbtn"
                                        actionListener="#{aggrBean.startup('D')}">
@@ -154,7 +154,7 @@
                     </li>
                 </ui:fragment>
 
-                <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
+                <ui:fragment rendered="#{(webutil.hasSubMenu('User')) and webutil.hasAccess('User')}">
                     <li>
                         <p:commandLink rendered="true" id="menureportsbtn"
                                        actionListener="#{uiLayout.doMenuAction('consumer', 'creports.xhtml')}">
