--- a/Invessence/modules/web/src/main/webapp/resources/primefaces-uob/1_1/theme.css
+++ b/Invessence/modules/web/src/main/webapp/resources/primefaces-uob/1_1/theme.css
@@ -112,7 +112,8 @@ transition: all 0.5s ease;
 	/*color: #ffffff;*/
 }
 .ui-widget-content a {
-	color: #ffffff;
+	color: #ffffff !important;
+    text-decoration: none;
 }
 .ui-widget-header {
 	/*border: 1px solid #3f7506;*/
