--- a/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_1/css/spark-layout.css
+++ b/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_1/css/spark-layout.css
@@ -630,3 +630,7 @@ box-shadow: 0px 1px 0px 0px rgba(70,145,91,0.8);}
 
 }
 
+a.ui-commandlink{text-decoration: none !important; margin-right: 5px;}
+
+.ui-widget-content a {text-decoration: none !important;}
+
