--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_1/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_1/css/invessenceCustom.css
@@ -4440,7 +4440,7 @@ span > input {
 .RPHeadings1, .RPHeadings2 {
     padding: 6px 20px;
     margin-right: 2px;
-    color: #000;
+    color: #A4332F;
     font-size: 22px !important;
     border-radius: 4px 4px 0 0;
     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
