--- a/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_1/css/spark-layout.css
+++ b/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_1/css/spark-layout.css
@@ -640,3 +640,60 @@ a.ui-commandlink{text-decoration: none !important; margin-right: 5px;}
 
 .ui-widget-content a {text-decoration: none !important;}
 
+
+.box h1{
+	font-size:1.5em;
+	color: #2f7a5d;
+}
+
+.box{
+	background: white;
+	width: 500px;
+	border-radius: 1px;
+	margin: 15px auto 0 auto;
+	padding: 30px;
+	border: #ebf8ff 2px solid;
+	overflow: auto;
+	-webkit-box-shadow: 0 4px 4px -2px rgba(0,0,0,.4);
+	-moz-box-shadow: 0 4px 4px -2px rgba(0,0,0,.4);
+	box-shadow: 0 4px 4px -2px rgba(0,0,0,.4);
+
+}
+
+
+
+.box .email{
+	background: #f6fafc;
+	border: #ccc 1px solid;
+	border-bottom: #ccc 2px solid;
+	padding: 8px;
+	width: 85%;
+	font-size: 14px !important;
+	color: #AAAAAA;
+	margin-top: 30px;
+
+	border-radius: 4px;
+}
+
+
+.box .btn span.ui-button-icon-right {    padding-top: 3px !important;
+	color: #bcf9ce !important;}
+
+.box .btn{
+
+	background-color: #5fcf80;
+    color: white;
+	border-radius: 4px;
+	border: #27ae60 1px solid;
+	margin: 20px auto;
+	float: left;
+	margin-left: 3px;
+	font-weight: 800;
+	font-size: 0.8em;
+}
+
+.box .btn:hover{
+	background-color: #5fcf80;
+}
+
+
