Issues fixes mobile and alignment

--- a/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
@@ -172,8 +172,24 @@
 
 
 
-                <li  class="test" id="dashboardMenuHighlight" style="float: right;">
-                    <i class="fa fa-home"></i> <a href="#{uiLayout.defaultHome}" id="menudashboardbtn">Dashboard</a>
+
+
+                <li  class="test mobileonly" id="dashboardMenuHighlight">
+                    <i class="fa fa-cog"></i> <a> Setting</a>
+
+                    <ul>
+                        <li><i class="fa fa-dashboard"></i> <a> My Profile</a></li>
+                    </ul>
+
+                </li>
+
+                <li  class="test mobileonly" id="dashboardMenuHighlight">
+                    <i class="fa fa-sign-out"></i> <a> Logout</a>
+
+                </li>
+
+                <li  class="test" id="dashboardMenuHighlight">
+                    <i class="fa fa-home"></i> <a href="#{uiLayout.defaultHome}" id="menudashboardbtn"> Dashboard</a>
 
                 </li>
 
