Issues fixes link color

--- a/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/1_1/theme.css
+++ b/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/1_1/theme.css
@@ -116,7 +116,8 @@ transition: all 0.5s ease;
 }
 
 .ui-widget-content a {
-    color: #ffffff !important;
+    color: #ffffff;
+    text-decoration: none !important;
 
 }
 .ui-widget-header {
