Issues fixes link color

--- a/Invessence/modules/web/src/main/webapp/resources/tcm/1_5/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/1_5/css/tcm.css
@@ -4521,3 +4521,8 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
     .customwidthbutton {width: 140px;
         margin: 5px;}
 }
+
+.ui-widget-content a {
+    color: #ffffff !important;
+
+}
