--- a/Invessence/modules/web/src/main/webapp/resources/tcm/1_6/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/1_6/css/tcm.css
@@ -4458,6 +4458,7 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
 
 .inactivetabtrade {
     border-radius: 0px;
+    color: #009abb !important;
     padding: 10px 30px;
     font-size: 18px !important;
     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
@@ -4492,6 +4493,7 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
 .inactivetabreview {
     border-radius: 0px;
     padding: 10px 30px;
+    color: #009abb !important;
     font-size: 18px !important;
     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
     -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
@@ -4522,7 +4524,3 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
         margin: 5px;}
 }
 
-.ui-widget-content a {
-    color: #ffffff !important;
-
-}
